fixed button alignment on lesson page

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -2,6 +2,8 @@
 html {
 	scroll-behavior: smooth;
   }
+
+
 .bottom-cta {
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
 	color: #fff;
@@ -80,7 +82,7 @@ html {
 	  margin: auto;
 	  background-color: #004777;
 	  color: #ffffff;
-	  background-image: url("/images/group-pic.jpg");
+	  background-image: url("/images/fa19decal.jpg");
 	  background-size: cover;
 	  width: 100%;
 	  height: 100%;
@@ -163,3 +165,11 @@ html {
     50%  { opacity: 1;  }
     100% { transform:translate(0,5px) rotate(45deg); opacity: 0; }
   }
+
+  //resizing 
+@media only screen and (max-width: 400px) {
+	section {
+		text-align: center;
+	}
+	
+	}
