--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -140,7 +140,7 @@ blockquote:before {
 
 .page {
 	margin-bottom: 0;
-	padding-bottom: 80px;
+	padding-bottom: 0px;
 }
 
 .center-text {
