--- a/_sass/lessons.scss
+++ b/_sass/lessons.scss
@@ -10,7 +10,7 @@ img {
 
 div#lesson-container {
 	margin: auto;
-	// justify-content: space-around;
+	justify-content: space-around;
 	width:100%;
 	flex-wrap: wrap;
 	display: flex;
